# akc-point-tracker

./: .flaskenv  README.md  app.py  backup.py  pyproject.toml  run.py
data/: dogs.db
docs/: ARCHITECTURE.md  FEATURES.md
migrations/versions/: 4e84cc852036_.py  576dd824e512_add_created_by_field_to_dogs_and_runs_.py  b8f1b7ca56fc_update_user_model_with_password_hash.py  bd3b02a1c3c1_events.py
src/: constants.py
src/models/: helpers.py  models.py
src/routes/: __init__.py  auth.py  blueprint.py  data.py  dogs.py  events.py  leaderboard.py  owner.py  runs.py  search.py
templates/: app-bar.html  base.html  change_password.html  create-dog.html  create-run.html  index.html  leaderboard.html  login.html  profile.html  runs.html  signup.html  update-dog.html  update-run.html
templates/components/: error_modal.html
templates/events/: calendar.html  create.html  edit.html  list.html  view.html
