[project]
name = "akc-point-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "alembic>=1.15.1",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.0",
    "markupsafe>=3.0.2",
    "requests>=2.32.3",
    "waitress>=3.0.2",
    "ruff>=0.11.8",
]
